--- a/web_back/login.html
+++ b/web_back/login.html
@@ -64,6 +64,7 @@
     </div>
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./js/utils/config.js"></script>
     <script src="./js/utils/user.js"></script>
     <script>
         $('.input_sub').click(function () {
