--- a/web_back/article_category.html
+++ b/web_back/article_category.html
@@ -29,50 +29,11 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>未分类</td>
-                        <td>uncategorized</td>
-                        <td class="text-center">
-                            <a href="javascript:editTr({&quot;id&quot;:&quot;1&quot;,&quot;slug&quot;:&quot;uncategorized&quot;,&quot;name&quot;:&quot;未分类&quot;});"
-                                class="btn btn-info btn-xs">编辑</a>
-                            <a href="javascript:deleteTr( 1 );" class="btn btn-danger btn-xs">删除</a>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>奇趣事</td>
-                        <td>funny</td>
-                        <td class="text-center">
-                            <a href="javascript:editTr({&quot;id&quot;:&quot;2&quot;,&quot;slug&quot;:&quot;funny&quot;,&quot;name&quot;:&quot;奇趣事&quot;});"
-                                class="btn btn-info btn-xs">编辑</a>
-                            <a href="javascript:deleteTr( 2 );" class="btn btn-danger btn-xs">删除</a>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>会生活</td>
-                        <td>living</td>
-                        <td class="text-center">
-                            <a href="javascript:editTr({&quot;id&quot;:&quot;3&quot;,&quot;slug&quot;:&quot;living&quot;,&quot;name&quot;:&quot;会生活&quot;});"
-                                class="btn btn-info btn-xs">编辑</a>
-                            <a href="javascript:deleteTr( 3 );" class="btn btn-danger btn-xs">删除</a>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>爱旅行</td>
-                        <td>travel</td>
-                        <td class="text-center">
-                            <a href="javascript:editTr({&quot;id&quot;:&quot;4&quot;,&quot;slug&quot;:&quot;travel&quot;,&quot;name&quot;:&quot;爱旅行&quot;});"
-                                class="btn btn-info btn-xs">编辑</a>
-                            <a href="javascript:deleteTr( 4 );" class="btn btn-danger btn-xs">删除</a>
-                        </td>
-                    </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td colspan="3" class="text-center">
-                            <a href="#" class="btn btn-success" data-toggle="modal" data-target="#addModal">新增分类</a>
+                            <a href="javascript:;" class="btn btn-success" data-target="#addModal">新增分类</a>
                         </td>
                     </tr>
                 </tfoot>
@@ -80,56 +41,152 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addModal" >
+    <div class="modal fade" id="addModal">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-              <h4 class="modal-title">新增分类</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">分类名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                    <h4 class="modal-title">新增分类</h4>
                 </div>
-                <div class="form-group">
-                  <label for="message-text" class="control-label">分类别名:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control" id="recipient-slug">
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="model_add">新增</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-              <button type="button" class="btn btn-primary" id="model_add">新增</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-      <script>
-          $('#addModal').modal({
-            show:false,
-            backdrop:false
-          });
+    <div class="modal fade" id="editModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                    <h4 class="modal-title">修改分类名称</h4>
+                </div>
+                <div class="modal-body" editid=''>
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control" id="edit-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control" id="edit-slug">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="model_edit_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="model_edit">保存编辑</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-          $('#model_shutoff').click(function(){
-            alert('shutoff');
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./js/utils/config.js"></script>
+    <script src="./js/utils/user.js"></script>
+    <script src="./js/utils/category.js"></script>
+    <script src="./js/template-web.js"></script>
+    <script id="tmp" type="text/html">
+        {{each data item index}}
+        <tr>
+            <td>{{item.name}}</td>
+            <td>{{item.slug}}</td>
+            <td class="text-center">
+                <a href="javascript:;" class="btn btn-info btn-xs" editid='{{item.id}}' editname='{{item.name}}' editslug='{{item.slug}}'>编辑</a>
+                <a href="javascript:;" class="btn btn-danger btn-xs" delid='{{item.id}}'>删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+    <script>
+
+        // 显示
+
+        function start() {
+            category.search(function (res) {
+                var html = template('tmp', res)
+                $('tbody').html(html);
+            });
+        }
+        start();
+
+        // 添加
+
+        $('.btn-success').click(function () {
+            $('#addModal').modal('show');
+        })
+
+        $('#model_add').click(function () {
+            var addname = $('#recipient-name').val().trim();
+            var addslug = $('#recipient-slug').val().trim();
+
+
+            category.add(addname, addslug, function (res) {
+                start();
+                $('#recipient-name').val('');
+                $('#recipient-slug').val('');
+                $('#addModal').modal('hide');
+            })
+        });
+
+        // 关闭窗口
+
+        $('#model_shutoff').click(function () {
             $('#addModal').modal('hide');
-          });
+        });
 
-          $('#model_add').click(function(){
-            alert('add');
-            $('#addModal').modal('hide');
-          });
+        $('#model_edit_shutoff').click(function () {
+            $('#editModal').modal('hide');
+        });
 
-          $('.category_table').delegate('a','click',function(){
-              if($(this).hasClass('btn-info')){
-                $('#addModal .modal-title').html('修改分类名称');
-                $('#addModal').modal('show');
-              }
-          })      
-      </script>
+        // 删除
+
+        $('tbody').on('click', '.btn-danger', function () {
+            var delid = $(this).attr('delid');
+            console.log(delid);
+
+            category.delete(delid, function (res) {
+                start();
+            })
+        })
+
+        // 编辑
+
+        $('tbody').on('click', '.btn-info', function () {
+            $('#editModal').modal('show');
+            $('#edit-name').val($(this).attr('editname'));
+            $('#edit-slug').val($(this).attr('editslug'));
+            $('.modal-body').attr('editid', $(this).attr('editid'));
+        })
+
+        $('#model_edit').click(function () {
+            var editid = $('.modal-body').attr('editid');
+            var editname = $('#edit-name').val();
+            var editslug = $('#edit-slug').val();
+            category.edit(editid, editname, editslug, function (res) {
+                start();
+                $('#edit-name').val('');
+                $('#edit-slug').val('');
+                $('#editModal').modal('hide');
+            })
+        })
+
+
+    </script>
 
 </body>
 
