--- a/web_back/article_list.html
+++ b/web_back/article_list.html
@@ -83,7 +83,7 @@
             <td class="text-center">{{item.date}}</td>
             <td class="text-center">{{item.state}}</td>
             <td class="text-center">
-                <a href="article_edit.html" class="btn btn-default btn-xs">编辑</a>
+                <a href="./article_edit.html?{{item.id}}" class="btn btn-default btn-xs">编辑</a>
                 <a href="javascript:;" delid='{{item.id}}' class="btn btn-danger btn-xs">删除</a>
             </td>
         </tr>
